Scrollbar bug fix

--- a/_prototypes/typeahead/passport-type/css/typeahead.css
+++ b/_prototypes/typeahead/passport-type/css/typeahead.css
@@ -32,7 +32,7 @@
     cursor: pointer;
     font-family: "Lato", "Helvetica Neue", Arial, sans-serif;
     border : none;
-    border-top: 2px solid #4263c2;
+    border-top: 1px solid #4263c2;
     background : none;
     border-radius : 0;
 }
